Add correct scopes and adapt API
